# Nostalgia-Nexus

./: README.md  apps.json  package-lock.json  package.json  test.html  x.json
src/: App.tsx  App.tsx.scss  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: download.rs  file_managment.rs  folder_size.rs  mod.rs  remove_file.rs  run_game.rs  structs.rs  unzip.rs
src/API/: CacheService.ts  Database.ts  GoogleDriveService.ts  LocalStorage.ts
src/Components/: AnimatedBackGround.tsx  AppItem.tsx  AppItem.tsx.scss  AppLayout.tsx  AppLayout.tsx.scss  AppSetting.tsx  AppStat.tsx  AppStat.tsx.scss  AppsGrid.tsx  AppsGrid.tsx.scss  CacheScreen.tsx  CacheScreen.tsx.scss  CategoryGroup.tsx  CategoryGroup.tsx.scss  CheckBox.tsx  CheckBox.tsx.scss  DownloadOption.tsx  DownloadOption.tsx.scss  DownloadProgressScreen.tsx  DownloadProgressScreen.tsx.scss  DownloadScreen.tsx  DownloadScreen.tsx.scss  Footer.tsx  Footer.tsx.scss  LazyImage.tsx  LazyImage.tsx.scss  NavBar.tsx  NavBar.tsx.scss  NavItem.tsx  NavItem.tsx.scss  SettingsGroup.tsx  SvgIcon.tsx  TitleBar.tsx  TitleBar.tsx.scss  TitleBarButton.tsx  TitleBarButton.tsx.scss  WelcomeScreen.tsx  WelcomeScreen.tsx.scss
src/Components/Routes/: Library.tsx  Library.tsx.scss  Settings.tsx  Settings.tsx.scss
src/Interfaces/: App.ts  AppInLibrary.ts  Category.ts  DownloadPayload.ts
src/Scss/: _theme.scss
