[package]
name = "nostalgia-nexus"
version = "0.1.0"
description = "Nostalgia nexus launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "path-all",
    "fs-all",
    "http-all",
    "window-show",
    "window-start-dragging",
    "window-close",
    "window-hide",
    "window-unminimize",
    "window-minimize",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
